ProgressBar: Fixed bar misalignment
Everything except the bar on a progress bar was shifted a few pixels down.

--- a/progressBar.css
+++ b/progressBar.css
@@ -3,6 +3,8 @@
     height: 20px;
     background-color: white;
     display: inline-block;
+    vertical-align: bottom;
+    margin-top: 5px;
 }
 
 .progressBar {
